statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app:  web
  template:
    metadata:
      labels:
        app:  web
    spec:
      containers:
      - name: nginx
        image: 237456571459.dkr.ecr.us-east-2.amazonaws.com/sample_node_js:latest
        ports:
        - containerPort: 3000
          name: web
