v1beta1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
    - host: myhostingingress.com
      http:
        paths:
        - backend:
            service:
              name: my-service
              port:
                number: 80
          path: /*
          pathType: Prefix
